maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:12: error: (Int, Int) does not take parameters
  setIndication(sortie(0), sortie(1), 0)
                      ^JediEscaper:12: error: (Int, Int) does not take parameters
  setIndication(sortie(0), sortie(1), 0)
                                 ^JediEscaper:15: error: not enough arguments for method traiterLaCase: (i: Int, hauteur: Int, largeur: Int)Unit.
Unspecified value parameters hauteur, largeur.
      traiterLaCase(0)
                   ^